deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: speakershop-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: speakershop

  template:

    metadata:
      labels:
        app: speakershop

    spec:
      containers:

        - name: speakershop-container
          image: mohitdocker241/speakershop:v1.0.0

          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service

metadata:
  name: speakershop-service

spec:
  selector:
    app: speakershop

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080

  type: NodePort
