service.yaml
apiVersion: v1
kind: Service

metadata:
  name: speakershop-service

spec:
  selector:
    app: speakershop

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080

  type: NodePort
